pantallas de entradas 2 y 3

--- a/SIENI/SIENI-web/src/main/webapp/view/aperturaAnioEscolar/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/aperturaAnioEscolar/index.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestión Año Escolar" url="#"/>
+            <p:menuitem value="Gestionar Año Escolar" url="#"/>
             <p:menuitem value="Apertura Año escolar" url="/faces/view/aperturaAnioEscolar/index.xhtml"/>
             <p:separator />
         </p:breadCrumb>
