--- a/SIENI/rio/tag/src/main/webapp/resources/less/theme/theme.less
+++ b/SIENI/rio/tag/src/main/webapp/resources/less/theme/theme.less
@@ -598,7 +598,7 @@ label{font-weight:normal !important;}
 .ui-paginator .ui-paginator-pages .ui-state-active, .ui-paginator .ui-paginator-pages .ui-state-hover{color:@paginator-element-color-hover !important; background-repeat:no-repeat; border-bottom: solid 3px @paginator-element-border-color-hover; 
                             font-size: @paginator-element-font-size-hover; border-radius:0px !important;}
 .ui-paginator .ui-paginator-rpp-options{outline:none; color:@paginator-rpp-color !important; font-family: 'roboto_condensedregular'; font-size: @paginator-rpp-font-size !important; background-color:@paginator-rpp-bg-color; border: solid 1px transparent;}
-.ui-paginator .ui-paginator-rpp-options.ui-state-focus{background-color:#0288d1 !important;}
+.ui-paginator .ui-paginator-rpp-options.ui-state-focus{background-color:#0288D1 !important;}
 
 /*Style For PickList ------------------------------------------------------------------------------------- */
 
@@ -1023,7 +1023,7 @@ hr.ui-widget-header{background-color: #E5EBF0; border-width:0px;}
                             font-size: 13px !important; color:#fff;}
                     .ui-colorpicker .ui-c span{border:solid 1px #fff !important; border-radius:3px; -webkit-border-radius:3px; -moz-border-radius:3px;}
                     .ui-ribbon-bigbutton{}
-                .ui-ribbon .ui-ribbon-group-content .ui-button {background-color: #0288d1;color:#FFFFFF;}
+                .ui-ribbon .ui-ribbon-group-content .ui-button {background-color: #0288D1;color:#FFFFFF;}
                 .ui-ribbon .ui-ribbon-group-content .ui-button.ui-state-hover {background-color: #29A1EC;}
                 .ui-ribbon .ui-ribbon-group-content .ui-button.ui-state-active {background-color: #29A1EC;}
                     
@@ -1390,7 +1390,7 @@ hr.ui-widget-header{background-color: #E5EBF0; border-width:0px;}
                                     border-radius:1px !important; -webkit-border-radius:1px !important; -moz-border-radius:1px !important; background-color:@panel-header-bg-color; margin:-2px;}
     .ui-datagrid .ui-panel .ui-panel-titlebar{padding: 6px 10px 6px 10px !important; font-size:16px; color:#546E7A; z-index:100; font-family: 'roboto_condensedregular';
                                     border-radius:2px !important; -webkit-border-radius:2px !important; -moz-border-radius:2px !important; background-color:#ffffff; border-bottom: dashed 1px #E0E0E0;}
-        .ui-panel .ui-panel-titlebar .ui-panel-title{margin:0px !important;}
+        .ui-panel .ui-panel-titlebar .ui-panel-title{font-family: serif;margin:0px !important;}
         .ui-panel .ui-panel-titlebar .ui-panel-titlebar-icon,
         .ui-panel .ui-panel-titlebar .ui-panel-titlebar-icon:hover,
         .ui-panel .ui-panel-titlebar .ui-panel-titlebar-icon:focus{margin-top:0px;}
