--- a/SIENI/rio/tag/src/main/webapp/resources/less/variables/theme-variables.less
+++ b/SIENI/rio/tag/src/main/webapp/resources/less/variables/theme-variables.less
@@ -94,7 +94,7 @@
 @paginator-rpp-color: #FFFFFF;
 @paginator-rpp-font-size: 18px;
 @paginator-rpp-bg-color: rgb(2, 119, 189);
-@paginator-rpp-bg-color-hover: #0288d1;
+@paginator-rpp-bg-color-hover: #0288D1;
 
 /* schedule for 5.2 and 5.1.8+ */
 @schedule-border-color: #E0E0E0;
