--- a/SIENI/rio/layout/resources/rio-layout/css/rio-layout.css
+++ b/SIENI/rio/layout/resources/rio-layout/css/rio-layout.css
@@ -48,10 +48,10 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  background-color: #0288d1;
+  background-color: #0288D1;
   background-repeat: no-repeat;
   height: auto;
-  border-top: solid 10px #0288d1;
+  border-top: solid 10px #0288D1;
 }
 .loginbodyorange {
   background-image: url("#{resource['rio-layout:images/orange-background.svg']}");
@@ -79,7 +79,7 @@ body {
   height: 64px;
   position: fixed;
   z-index: 1000;
-  background-color: #03a9f4;
+  background-color: #03A9F4;
   -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
@@ -87,7 +87,7 @@ body {
 #logo {
   width: 230px;
   height: 64px;
-  background-color: #0288d1;
+  background-color: #0288D1;
   border-right: solid 1px #0277bd;
   display: block;
 }
@@ -118,7 +118,7 @@ body {
 }
 #mobile-menu-button:hover,
 #mobile-menu-button:focus {
-  background-color: #0288d1;
+  background-color: #0288D1;
 }
 #mobile-menu-button.MenuClose {
   margin-top: 39px !important;
@@ -343,7 +343,7 @@ body {
   font-size: 15px;
 }
 .layout-menu > li ul li a:focus {
-  color: #03a9f4;
+  color: #03A9F4;
 }
 .layout-menu li ul li a {
   width: 80%;
