--- a/SIENI/SIENI-web/src/main/webapp/view/registroClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/registroClases/index.xhtml
@@ -42,14 +42,17 @@
                 <h:form>
                     <div class="EmptyBox20"></div>
                     <p:outputLabel for="hora" value="Hora: " class="Container10 Responsive"></p:outputLabel>
-                    <p:inputMask id="hora" mask="99:99 " class="Container10 Responsive "/>
+                    <p:inputMask id="hora" mask="99:99 " class="Container10 Responsive " value="99:99"/>
+                    <!--<p:inputMask id="hora" mask="99:99 " class="Container10 Responsive "/>-->
                     <p:selectOneMenu tabindex="1" class="Container10 Responsive">
+                        <f:selectItem itemValue ="1" itemLabel="Xm" />
                         <f:selectItem itemValue ="1" itemLabel="am" />
                         <f:selectItem itemValue="0" itemLabel="pm"/>
                     </p:selectOneMenu>
                     <div class="EmptyBox20"></div>
                     <p:outputLabel for="estado" value="Estado: " class="Container10 Responsive"></p:outputLabel>
                     <p:selectOneMenu tabindex="1" id="estado">
+                        <f:selectItem itemValue="0" itemLabel="XX--15--XX"/>
                         <f:selectItem itemValue="0" itemLabel="No Publicada"/>
                         <f:selectItem itemValue ="1" itemLabel="Publicada"/>
                         <f:selectItem itemValue="2" itemLabel="Eliminada"/>
@@ -57,6 +60,7 @@
                     <div class="EmptyBox20"></div>
                     <p:outputLabel for="tipo" value="Tipo: " class="Container10 Responsive"></p:outputLabel>
                     <p:selectOneMenu tabindex="1" id="tipo">                
+                        <f:selectItem itemValue="0" itemLabel="XX--50--XX"/>
                         <f:selectItem itemValue="0" itemLabel="Video-Clase"/>
                         <f:selectItem itemValue ="1" itemLabel="Clase en vivo"/>
                         <f:selectItem itemValue="2" itemLabel="Clase interactiva"/>
@@ -64,11 +68,13 @@
                     <div class="EmptyBox20"></div>
                     <p:outputLabel for="horario" value="Horario:  " class=" Container10 Responsive"></p:outputLabel>
                     <p:selectManyButton id="horario">
-                        <f:selectItem itemValue="4" itemLabel="Lunes"/>
-                        <f:selectItem itemValue="5" itemLabel="Martes"/>
-                        <f:selectItem itemValue="6" itemLabel="Miercoles"/>
-                        <f:selectItem itemValue="7" itemLabel="Jueves"/>
-                        <f:selectItem itemValue="8" itemLabel="Viernes"/>
+                        <f:selectItem itemValue="1" itemLabel="Lunes"/>
+                        <f:selectItem itemValue="2" itemLabel="Martes"/>
+                        <f:selectItem itemValue="3" itemLabel="Miercoles"/>
+                        <f:selectItem itemValue="4" itemLabel="Jueves"/>
+                        <f:selectItem itemValue="5" itemLabel="Viernes"/>
+<!--                        <f:selectItem itemValue="6" itemLabel="Sabado"/>
+                        <f:selectItem itemValue="7" itemLabel="Domingo"/>-->
                     </p:selectManyButton>
                     <div class="EmptyBox20"></div>
                     <p:commandButton value="Guardar"/>
