--- a/SIENI/SIENI-web/src/main/webapp/view/registroClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/registroClases/index.xhtml
@@ -14,10 +14,13 @@
         </p:breadCrumb>
     </ui:define>
     <ui:define name="content">
-
         <p:tabView>
-            <p:tab title="Consultar clases registradas" >
+            <p:tab title="Consultar programación de clases">
                 <h:form>
+                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                        <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    </p:dialog>
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <p:remoteCommand  onstart="alert('Modificar')" update="clases" name="modificar"/>
                     <p:remoteCommand  onstart="alert('Eliminar')" update="clases" name="eliminar"/>
                     <p:dataTable id="clases" var="car" value="" rows="10"
@@ -26,62 +29,91 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true"
                                  >
-                        <p:column headerText="Docente"></p:column>
-                        <p:column headerText="Hora"></p:column>
-                        <p:column headerText="Estado"></p:column>
-                        <p:column headerText="Tipo"></p:column>
-                        <p:column headerText="Horario"></p:column>
+                        <p:column headerText="Docente">
+                        </p:column>
+                        <p:column headerText="Tipo">
+                        </p:column>
+                        <p:column headerText="Estado">
+                        </p:column>
+                        <p:column headerText="Tema">
+                        </p:column>
+                        <p:column headerText="Hora">
+                        </p:column>
+                        <p:column headerText="Horario">
+                        </p:column>
+                        <p:column headerText="Tipo Publicación">
+                        </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-compose Fs30" style="cursor: pointer" onclick="modificar()" title="Modificar"></i>
-                            <i class="icon-close Fs30 Red" style="cursor: pointer" onclick="eliminar()" title="Eliminar"></i>
+                            <i class="icon-forbid-1 Fs25 Red" style="cursor: pointer" title="Consultar Clase"></i>
+                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Consultar Plantilla de Clase"></i>
+                            <i class="icon-clock Fs25 Red" style="cursor: pointer" title="Modificar Programación de Clase"></i>
+                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Programación de Clase"></i>
                         </p:column>
                     </p:dataTable>
+                    <p:commandButton value="Crear"></p:commandButton>
+                    <p:commandButton value="Refrescar"></p:commandButton>
                 </h:form>
             </p:tab>
-            <p:tab title="Formulario de registro de clases en vivo" >
+            <p:tab title="Crear programación de clase">
                 <h:form>
+                    <p:dialog widgetVar="dlgAyuda2" modal="true" appendTo="@(body)" header="Ayuda">
+                        <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    </p:dialog>
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda2').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="hora" value="Hora: " class="Container10 Responsive"></p:outputLabel>
-                    <p:inputMask id="hora" mask="99:99 " class="Container10 Responsive " value="99:99"/>
-                    <!--<p:inputMask id="hora" mask="99:99 " class="Container10 Responsive "/>-->
-                    <p:selectOneMenu tabindex="1" class="Container10 Responsive">
-                        <f:selectItem itemValue ="1" itemLabel="Xm" />
-                        <f:selectItem itemValue ="1" itemLabel="am" />
-                        <f:selectItem itemValue="0" itemLabel="pm"/>
+                    <p:outputLabel for="docente" value="Docente: " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="docente" value="#{crearClaseForm.docente}" class="Contanier20 Responsive" filter="true" filterMatchMode="startsWith">
+                        <f:selectItems var="docente" value="#{crearClaseForm.docentes}" itemLabel="#{docente.description}" itemValue="#{docente.self}"></f:selectItems>
                     </p:selectOneMenu>
+                    <p:tooltip for="docente" value="Docente que impartirá la clase" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="estado" value="Estado: " class="Container10 Responsive"></p:outputLabel>
-                    <p:selectOneMenu tabindex="1" id="estado" class="Container10 Responsive">
-                        <f:selectItem itemValue="0" itemLabel="XX--15--XX"/>
-                        <f:selectItem itemValue="0" itemLabel="No Publicada"/>
-                        <f:selectItem itemValue ="1" itemLabel="Publicada"/>
-                        <f:selectItem itemValue="2" itemLabel="Eliminada"/>
+                    <p:outputLabel for="tipoClase" value="Tipo de Clase: " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="tipoClase" value="#{crearClaseForm.tipoClase}" class="Contanier20 Responsive">
+                        <f:selectItems var="tipoClase" value="#{crearClaseForm.tipoClases}" itemLabel="#{tipoClase.description}" itemValue="#{tipoClase.self}"></f:selectItems>
                     </p:selectOneMenu>
+                    <p:tooltip for="tipoClase" value="Tipo de clase a impartir" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="tipo" value="Tipo: " class="Container10 Responsive"></p:outputLabel>
-                    <p:selectOneMenu tabindex="1" id="tipo" class="Container10 Responsive">
-                        <f:selectItem itemValue="0" itemLabel="XX--50--XX"/>
-                        <f:selectItem itemValue="0" itemLabel="Video-Clase"/>
-                        <f:selectItem itemValue ="1" itemLabel="Clase en vivo"/>
-                        <f:selectItem itemValue="2" itemLabel="Clase interactiva"/>
+                    <p:outputLabel for="curso" value="Curso: " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="curso" value="#{crearClaseForm.curso}" class="Contanier20 Responsive">
+                        <f:selectItems var="curso" value="#{crearClaseForm.cursos}" itemLabel="#{curso.description}" itemValue="#{curso.self}"></f:selectItems>
                     </p:selectOneMenu>
+                    <p:tooltip for="curso" value="Ejemplo: Matemáticas" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="horario" value="Horario:  " class=" Container10 Responsive"></p:outputLabel>
-                    <p:selectManyButton id="horario" class=" Responsive">
-                        <f:selectItem itemValue="1" itemLabel="Lunes"/>
-                        <f:selectItem itemValue="2" itemLabel="Martes"/>
-                        <f:selectItem itemValue="3" itemLabel="Miercoles"/>
-                        <f:selectItem itemValue="4" itemLabel="Jueves"/>
-                        <f:selectItem itemValue="5" itemLabel="Viernes"/>
-<!--                        <f:selectItem itemValue="6" itemLabel="Sabado"/>
-                        <f:selectItem itemValue="7" itemLabel="Domingo"/>-->
+                    <p:outputLabel for="estadoClase" value="Estado de Clase: " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="estadoClase" value="#{crearClaseForm.estadoClase}" class="Contanier20 Responsive">
+                        <f:selectItems var="estadoClase" value="#{crearClaseForm.estadoClases}" itemLabel="#{estadoClase.description}" itemValue="#{estadoClase.self}"></f:selectItems>
+                    </p:selectOneMenu>
+                    <p:tooltip for="estadoClase" value="Estado en el que se encuentra la programación de una clase" />
+                    <div class="EmptyBox20"></div>
+                    <p:outputLabel for="temaClase" value="Tema de Clase: " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:inputText id="temaClase" value="#{crearClaseForm.temaClase}"></p:inputText>
+                    <p:tooltip for="temaClase" value="Ejemplo: Caso 1 de factoreo" />
+                    <div class="EmptyBox20"></div>
+                    <p:outputLabel for="hora" value="Hora: " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:inputMask id="hora" mask="99:99" class="Contanier20 Responsive" value="#{crearClaseForm.hora}"></p:inputMask>
+                    <p:selectOneMenu value="#{crearClaseForm.amPm}" class="Contanier20 Responsive">
+                        <f:selectItems var="am" value="#{crearClaseForm.amPms}" itemLabel="#{am.description}" itemValue="#{am.self}"></f:selectItems>
+                    </p:selectOneMenu>
+                    <p:tooltip for="hora" value="Ejemplo 02:06pm" />
+                    <div class="EmptyBox20"></div>
+                    <p:outputLabel for="horarios" value="Horario : " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:selectManyButton id="horarios" value="#{crearClaseForm.horariosSelected}">
+                        <f:selectItems var="horarios" value="#{crearClaseForm.horarios}" itemLabel="#{horarios.description}" itemValue="#{horarios.self}"/>
                     </p:selectManyButton>
+                    <p:tooltip for="horarios" value="Dias en los se impartirá la clase" />
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Guardar"/>
-                    <p:commandButton value="Limpiar"/>
-                    <p:commandButton value="Cancelar"/>
+                    <p:outputLabel for="tipoPublicacion" value="Tipo de publicación: " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="tipoPublicacion" value="#{crearClaseForm.tipoPublicacion}">
+                        <f:selectItems var="tipoPublicacion" value="#{crearClaseForm.tipoPublicaciones}" itemLabel="#{tipoPublicacion.description}" itemValue="#{tipoPublicacion.self}"></f:selectItems>
+                    </p:selectOneMenu>
+                    <p:tooltip for="tipoPublicacion" value="Tipo de publicación de la clase"/>
+                    <div class="EmptyBox20"></div>
+                    <p:commandButton value="Crear"></p:commandButton>
+                    <p:commandButton value="Limpiar"></p:commandButton>
+                    <p:commandButton value="Cancelar"></p:commandButton>
                 </h:form>
             </p:tab>
-        </p:tabView>        
+        </p:tabView>
+
     </ui:define>
 </ui:composition>
