--- a/SIENI/SIENI-web/src/main/webapp/view/registroClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/registroClases/index.xhtml
@@ -59,50 +59,54 @@
                     <p:dialog widgetVar="dlgAyuda2" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
+
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda2').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="docente" value="Docente: " class="Contanier20 Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="docente" value="#{crearClaseForm.docente}" class="Contanier20 Responsive" filter="true" filterMatchMode="startsWith">
+                    <p:outputLabel for="docente" value="Docente: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="docente" value="#{crearClaseForm.docente}" class="Contanier10 Responsive" filter="true" filterMatchMode="startsWith">
                         <f:selectItems var="docente" value="#{crearClaseForm.docentes}" itemLabel="#{docente.description}" itemValue="#{docente.self}"></f:selectItems>
                     </p:selectOneMenu>
                     <p:tooltip for="docente" value="Docente que impartirá la clase" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="tipoClase" value="Tipo de Clase: " class="Contanier20 Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="tipoClase" value="#{crearClaseForm.tipoClase}" class="Contanier20 Responsive">
+                    <p:outputLabel for="tipoClase" value="Tipo de Clase: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="tipoClase" value="#{crearClaseForm.tipoClase}" class="Contanier10 Responsive">
                         <f:selectItems var="tipoClase" value="#{crearClaseForm.tipoClases}" itemLabel="#{tipoClase.description}" itemValue="#{tipoClase.self}"></f:selectItems>
                     </p:selectOneMenu>
                     <p:tooltip for="tipoClase" value="Tipo de clase a impartir" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="curso" value="Curso: " class="Contanier20 Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="curso" value="#{crearClaseForm.curso}" class="Contanier20 Responsive">
+                    <p:outputLabel for="curso" value="Curso: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="curso" value="#{crearClaseForm.curso}" class="Contanier10 Responsive">
                         <f:selectItems var="curso" value="#{crearClaseForm.cursos}" itemLabel="#{curso.description}" itemValue="#{curso.self}"></f:selectItems>
                     </p:selectOneMenu>
                     <p:tooltip for="curso" value="Ejemplo: Matemáticas" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="estadoClase" value="Estado de Clase: " class="Contanier20 Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="estadoClase" value="#{crearClaseForm.estadoClase}" class="Contanier20 Responsive">
+                    <p:outputLabel for="estadoClase" value="Estado de Clase: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="estadoClase" value="#{crearClaseForm.estadoClase}" class="Contanier10 Responsive">
                         <f:selectItems var="estadoClase" value="#{crearClaseForm.estadoClases}" itemLabel="#{estadoClase.description}" itemValue="#{estadoClase.self}"></f:selectItems>
                     </p:selectOneMenu>
                     <p:tooltip for="estadoClase" value="Estado en el que se encuentra la programación de una clase" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="temaClase" value="Tema de Clase: " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:outputLabel for="temaClase" value="Tema de Clase: " class="Contanier10 Responsive"></p:outputLabel>
                     <p:inputText id="temaClase" value="#{crearClaseForm.temaClase}"></p:inputText>
                     <p:tooltip for="temaClase" value="Ejemplo: Caso 1 de factoreo" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="hora" value="Hora: " class="Contanier20 Responsive"></p:outputLabel>
-                    <p:inputMask id="hora" mask="99:99" class="Contanier20 Responsive" value="#{crearClaseForm.hora}"></p:inputMask>
-                    <p:selectOneMenu value="#{crearClaseForm.amPm}" class="Contanier20 Responsive">
+                    <p:outputLabel for="hora" value="Hora: " class="Contanier10 Responsive"></p:outputLabel>
+                    <p:spinner id="hora" max="12" min="1" value="#{crearClaseForm.hora}" class="Contanier10 Responsive"></p:spinner>
+                    <p:outputLabel value=":" class="Responsive"></p:outputLabel>
+                    <p:spinner id="min" max="59" min="0" value="#{crearClaseForm.min}" class="Contanier10 Responsive"></p:spinner>
+                    <!--<p:inputMask id="hora" mask="99:99" class="Contanier10 Responsive" value="#{crearClaseForm.hora}"></p:inputMask>-->
+                    <p:selectOneMenu id="ampm" value="#{crearClaseForm.amPm}" class="Contanier10 Responsive">
                         <f:selectItems var="am" value="#{crearClaseForm.amPms}" itemLabel="#{am.description}" itemValue="#{am.self}"></f:selectItems>
                     </p:selectOneMenu>
-                    <p:tooltip for="hora" value="Ejemplo 02:06pm" />
+                    <p:tooltip for="hora,min,ampm" value="Ejemplo 02:06pm" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="horarios" value="Horario : " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:outputLabel for="horarios" value="Horario : " class="Contanier10 Responsive"></p:outputLabel>
                     <p:selectManyButton id="horarios" value="#{crearClaseForm.horariosSelected}">
                         <f:selectItems var="horarios" value="#{crearClaseForm.horarios}" itemLabel="#{horarios.description}" itemValue="#{horarios.self}"/>
                     </p:selectManyButton>
                     <p:tooltip for="horarios" value="Dias en los se impartirá la clase" />
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="tipoPublicacion" value="Tipo de publicación: " class="Contanier20 Responsive"></p:outputLabel>
+                    <p:outputLabel for="tipoPublicacion" value="Tipo de publicación: " class="Contanier10 Responsive"></p:outputLabel>
                     <p:selectOneMenu id="tipoPublicacion" value="#{crearClaseForm.tipoPublicacion}">
                         <f:selectItems var="tipoPublicacion" value="#{crearClaseForm.tipoPublicaciones}" itemLabel="#{tipoPublicacion.description}" itemValue="#{tipoPublicacion.self}"></f:selectItems>
                     </p:selectOneMenu>
